--- a/MyBase/MyBase.Infrastructure.Core/MyBase.Infrastructure.Core.csproj
+++ b/MyBase/MyBase.Infrastructure.Core/MyBase.Infrastructure.Core.csproj
@@ -39,13 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PresentationModel\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceInterface\IUserMetaService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Abstraction\" />
     <Folder Include="CustomerValidator\" />
-    <Folder Include="PresentationModel\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyBase.Domain.Core\MyBase.Domain.Core.csproj">
